Fix site banner alignment with no-image primary hero

--- a/src/amo/components/HeroRecommendation/styles.scss
+++ b/src/amo/components/HeroRecommendation/styles.scss
@@ -115,10 +115,6 @@
 .HeroRecommendation--no-image {
   justify-content: center;
 
-  @include respond-to(extraExtraLarge) {
-    @include padding-start(36px);
-  }
-
   .HeroRecommendation-info {
     align-items: center;
     display: flex;
